--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # CAS Server Context Configuration
 #
 server.context-path=/cas
-server.port=10005
+server.port=8080
 
 server.ssl.enabled=false
 server.ssl.key-store=classpath:thekeystore
@@ -107,34 +107,38 @@ server.context-parameters.isLog4jAutoInitializationDisabled=true
 spring.aop.auto=true
 spring.aop.proxy-target-class=true
 
+# Rest认证配置
+cas.authn.rest.uri=http://localhost:8888/cas/login
+cas.authn.rest.name=
+
 ##
 # CAS Authentication Credentials
 #
 #cas.authn.accept.users=casuser::Mellon
 #查询账号密码SQL，必须包含密码字段
-cas.authn.jdbc.query[0].sql=select * from user where username=?
+#cas.authn.jdbc.query[0].sql=select * from user where username=?
 #指定上面的SQL查询字段名（必须)
-cas.authn.jdbc.query[0].fieldPassword=password
+#cas.authn.jdbc.query[0].fieldPassword=password
 #指定过期字段，1为过期，若过期不可用(配置账户是否过期)，数据库表中的列expired
-cas.authn.jdbc.query[0].fieldExpired=expired
+#cas.authn.jdbc.query[0].fieldExpired=expired
 #为不可用字段段，1为不可用，需要修改密码(账户不可用)，数据库表中的列expired
-cas.authn.jdbc.query[0].fieldDisabled=disabled
+#cas.authn.jdbc.query[0].fieldDisabled=disabled
 #数据库连接
-cas.authn.jdbc.query[0].url=jdbc:mysql://localhost:3306/cas?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+#cas.authn.jdbc.query[0].url=jdbc:mysql://192.168.50.156:3306/cas?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 #数据库dialect配置
-cas.authn.jdbc.query[0].dialect=org.hibernate.dialect.MySQLDialect
+#cas.authn.jdbc.query[0].dialect=org.hibernate.dialect.MySQLDialect
 #数据库用户名
-cas.authn.jdbc.query[0].user=root
+#cas.authn.jdbc.query[0].user=root
 #数据库用户密码
-cas.authn.jdbc.query[0].password=123456
+#cas.authn.jdbc.query[0].password=123456
 #数据库事务自动提交
-cas.authn.jdbc.query[0].autocommit=false
+#cas.authn.jdbc.query[0].autocommit=false
 #数据库驱动
-cas.authn.jdbc.query[0].driverClass=com.mysql.jdbc.Driver
+#cas.authn.jdbc.query[0].driverClass=com.mysql.jdbc.Driver
 #超时配置
-cas.authn.jdbc.query[0].idleTimeout=5000
+#cas.authn.jdbc.query[0].idleTimeout=5000
 #默认加密策略，通过encodingAlgorithm来指定算法，默认NONE不加密
-cas.authn.jdbc.query[0].passwordEncoder.type=NONE
+#cas.authn.jdbc.query[0].passwordEncoder.type=NONE
 #cas.authn.jdbc.query[0].passwordEncoder.characterEncoding=UTF-8
 #cas.authn.jdbc.query[0].passwordEncoder.encodingAlgorithm=MD5
 
