--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,10 @@
 #
 server.context-path=/cas
 server.port=8080
+cas.server.name=http://192.168.50.156:8080
+cas.server.prefix=http://192.168.50.156:8080/cas
 
+#配置SSL
 server.ssl.enabled=false
 server.ssl.key-store=classpath:thekeystore
 server.ssl.key-store-password=123456
@@ -77,7 +80,7 @@ management.health.status.order=WARN, DOWN, OUT_OF_SERVICE, UNKNOWN, UP
 # With basic authentication, assuming Spring Security and/or relevant modules are on the classpath.
 security.basic.authorize-mode=role
 security.basic.path=/cas/status/**
-# security.basic.enabled=true
+#security.basic.enabled=false
 # security.user.name=casuser
 # security.user.password=
 
@@ -108,39 +111,14 @@ spring.aop.auto=true
 spring.aop.proxy-target-class=true
 
 # Rest认证配置
-cas.authn.rest.uri=http://localhost:8888/cas/login
+cas.authn.rest.uri=http://localhost:10002/cas/login
 cas.authn.rest.name=
 
 ##
 # CAS Authentication Credentials
 #
 #cas.authn.accept.users=casuser::Mellon
-#查询账号密码SQL，必须包含密码字段
-#cas.authn.jdbc.query[0].sql=select * from user where username=?
-#指定上面的SQL查询字段名（必须)
-#cas.authn.jdbc.query[0].fieldPassword=password
-#指定过期字段，1为过期，若过期不可用(配置账户是否过期)，数据库表中的列expired
-#cas.authn.jdbc.query[0].fieldExpired=expired
-#为不可用字段段，1为不可用，需要修改密码(账户不可用)，数据库表中的列expired
-#cas.authn.jdbc.query[0].fieldDisabled=disabled
-#数据库连接
-#cas.authn.jdbc.query[0].url=jdbc:mysql://192.168.50.156:3306/cas?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
-#数据库dialect配置
-#cas.authn.jdbc.query[0].dialect=org.hibernate.dialect.MySQLDialect
-#数据库用户名
-#cas.authn.jdbc.query[0].user=root
-#数据库用户密码
-#cas.authn.jdbc.query[0].password=123456
-#数据库事务自动提交
-#cas.authn.jdbc.query[0].autocommit=false
-#数据库驱动
-#cas.authn.jdbc.query[0].driverClass=com.mysql.jdbc.Driver
-#超时配置
-#cas.authn.jdbc.query[0].idleTimeout=5000
-#默认加密策略，通过encodingAlgorithm来指定算法，默认NONE不加密
-#cas.authn.jdbc.query[0].passwordEncoder.type=NONE
-#cas.authn.jdbc.query[0].passwordEncoder.characterEncoding=UTF-8
-#cas.authn.jdbc.query[0].passwordEncoder.encodingAlgorithm=MD5
+
 
 ##
 # Service Registry(服务注册)
@@ -155,10 +133,22 @@ cas.authn.rest.name=
 # cas.serviceRegistry.schedule.startDelay=15000
 # Json配置
 #cas.serviceRegistry.json.location=classpath:/services
+
+
+cas.authn.oauth.refreshToken.timeToKillInSeconds=2592000
+cas.authn.oauth.code.timeToKillInSeconds=600
+cas.authn.oauth.code.numberOfUses=1
+cas.authn.oauth.accessToken.releaseProtocolAttributes=true
+cas.authn.oauth.accessToken.timeToKillInSeconds=7200
+cas.authn.oauth.accessToken.maxTimeToLiveInSeconds=28800
+cas.authn.oauth.grants.resourceOwner.requireServiceHeader=true
+cas.authn.oauth.userProfileViewType=NESTED
+
 cas.serviceRegistry.jpa.user=root
 cas.serviceRegistry.jpa.password=123456
+  #Vesystem.com2019
 cas.serviceRegistry.jpa.driverClass=com.mysql.jdbc.Driver
-cas.serviceRegistry.jpa.url=jdbc:mysql://127.0.0.1:3306/cas?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+cas.serviceRegistry.jpa.url=jdbc:mysql://localhost:3306/cas?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 cas.serviceRegistry.jpa.dialect=org.hibernate.dialect.MySQL5Dialect
 
 cas.serviceRegistry.jpa.failFastTimeout=1
@@ -189,7 +179,7 @@ cas.logout.redirectParameter=service
 #登出后需要跳转到的地址,如果配置该参数,service将无效。
 #cas.logout.redirectUrl=https://www.taobao.com
 #在退出时是否需要 确认退出提示   true弹出确认提示框  false直接退出
-cas.logout.confirmLogout=true
+cas.logout.confirmLogout=false
 #是否移除子系统的票据
 cas.logout.removeDescendantTickets=true
 #禁用单点登出,默认是false不禁止
