--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -1,5 +1,5 @@
-cas.server.name: https://cas.example.org:8443
-cas.server.prefix: https://cas.example.org:8443/cas
+cas.server.name: http://192.168.50.156:8080
+cas.server.prefix: http://192.168.50.156:8080/cas
 
 cas.adminPagesSecurity.ip=127\.0\.0\.1
 
